@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2008-04-28 18:38:37 $
+ @(#) $RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2008/07/11 00:23:41 $
 
  -----------------------------------------------------------------------------
 
@@ -46,11 +46,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2008-04-28 18:38:37 $ by $Author: brian $
+ Last Modified $Date: 2008/07/11 00:23:41 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: netdir.c,v $
+ Revision 0.9.2.8  2008/07/11 00:23:41  brian
+ - gettext declarations
+
  Revision 0.9.2.7  2008-04-28 18:38:37  brian
  - header updates for release
 
@@ -92,10 +95,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2008-04-28 18:38:37 $"
+#ident "@(#) $RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2008/07/11 00:23:41 $"
 
 static char const ident[] =
-    "$RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.7 $) $Date: 2008-04-28 18:38:37 $";
+    "$RCSfile: netdir.c,v $ $Name:  $($Revision: 0.9.2.8 $) $Date: 2008/07/11 00:23:41 $";
 
 /* This file can be processed with doxygen(1). */
 
@@ -861,15 +864,15 @@ __nsl_netdir_sperror(void)
 		case ND_FAILCTRL:
 		case ND_SYSTEM:
 		case ND_NOCONVERT:
-			(void) strncpy(nd_errbuf, __nsl_nd_errlist[idx], NDERR_BUFSZ);
+			(void) strncpy(nd_errbuf, gettext(__nsl_nd_errlist[idx]), NDERR_BUFSZ);
 			break;
 		case ND_NOSYM:
 		case ND_OPEN:
-			(void) snprintf(nd_errbuf, NDERR_BUFSZ, __nsl_nd_errlist[idx], dlerror());
+			(void) snprintf(nd_errbuf, NDERR_BUFSZ, gettext(__nsl_nd_errlist[idx]), dlerror());
 			break;
 		default:
 			idx = ND_ERROR_MAX - ND_ERROR_OFS;
-			(void) snprintf(nd_errbuf, NDERR_BUFSZ, __nsl_nd_errlist[idx], err);
+			(void) snprintf(nd_errbuf, NDERR_BUFSZ, gettext(__nsl_nd_errlist[idx]), err);
 			break;
 		}
 	}
